if ENABLE_TESTS
TESTS += \
	%reldir%/run.sh
endif

dist_check_DATA += \
	%reldir%/camera.lua \
	%reldir%/common.lua \
	%reldir%/entity.lua \
	%reldir%/font.lua \
	%reldir%/input.lua \
	%reldir%/light.lua \
	%reldir%/math.lua \
	%reldir%/player.lua \
	%reldir%/run.sh \
	%reldir%/state.lua \
	%reldir%/textbox.lua \
	%reldir%/unit.lua \
	%reldir%/utils.lua
