noinst_HEADERS += \
	%reldir%/handle.h \
	%reldir%/opengl.h \
	%reldir%/post.h \
	%reldir%/prog.h \
	%reldir%/resource.h \
	%reldir%/utils.h \
	%reldir%/vao.h

nngn_SOURCES += \
	%reldir%/opengl.cpp \
	%reldir%/post.cpp \
	%reldir%/prog.cpp \
	%reldir%/resource.cpp \
	%reldir%/utils.cpp \
	%reldir%/vao.cpp
