noinst_HEADERS += \
	%reldir%/cmd_pool.h \
	%reldir%/device.h \
	%reldir%/handle.h \
	%reldir%/instance.h \
	%reldir%/memory.h \
	%reldir%/resource.h \
	%reldir%/staging.h \
	%reldir%/swapchain.h \
	%reldir%/utils.h \
	%reldir%/types.h \
	%reldir%/vulkan.h
nngn_SOURCES += \
	%reldir%/cmd_pool.cpp \
	%reldir%/device.cpp \
	%reldir%/instance.cpp \
	%reldir%/memory.cpp \
	%reldir%/resource.cpp \
	%reldir%/staging.cpp \
	%reldir%/swapchain.cpp \
	%reldir%/utils.cpp \
	%reldir%/types.cpp \
	%reldir%/vulkan.cpp
